# DPMO

./: CMakeLists.txt  RunClient.cpp  RunClient2.cpp  RunServer.cpp  conf.xml  readme.md  testConfiguration.cpp  testRdmaSocket.cpp
include/: Client.h  Client.hpp  Configuration.h  Debug.h  Debug.hpp  Global.h  Global.hpp  Message.hpp  RdmaSocket.h  RdmaSocket.hpp  Server.h  Server.hpp  librdmapmem.hpp
lib/: librdmapmem.cpp
src/: Client.cpp  Configuration.cpp  Debug.cpp  RdmaSocket.cpp  Server.cpp
test/: CMakeLists.txt  testGetPoolObj.cpp  testRead.cpp  testWrite.cpp
